# tamil_ocr

./: .gitignore  LICENSE  MANIFEST.IN  README.md  hubconf.py  inference.py  ocr_utils.py  output.txt  output_text_detect_recognize_multiple_image.txt  output_text_detect_recognize_single_image.txt  output_text_recognize_multiple_image.txt  output_text_recognize_single_image.txt  pyproject.toml  requirements.txt  setup.cfg  tamil_ocr.py  test.py  tutorial.ipynb  tutorials.py
craft_text_detector/: craft_utils.py  file_utils.py  predict.py  requirements.txt
gradio/: apps.py  requirements.txt
miscellenous/: ocr_onnx.py  onnx_convert.py  onnx_tutorials.py
ocr_tamil/: __init__.py  ocr.py
ocr_tamil/craft_text_detector/: __init__.py  craft_utils.py  file_utils.py  image_transforms.py  predict.py  requirements.txt
ocr_tamil/craft_text_detector/models/: craftnet.py
ocr_tamil/craft_text_detector/models/basenet/: vgg16_bn.py
ocr_tamil/model_weights/: info.txt
ocr_tamil/strhub/data/: dataset.py  utils.py
ocr_tamil/strhub/models/: base.py  utils.py
ocr_tamil/strhub/models/parseq/: system.py
outputs/: formatted_handwritten.txt  handwritten_image.txt  output_text_detect_recognize_multiple_image.txt  output_text_detect_recognize_single_image.txt  output_text_recognize_multiple_image.txt  output_text_recognize_single_image.txt
