[build-system]
requires = [
"setuptools>=60",
"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_tamil"
version = "0.2.8"
description = "Python Tamil OCR package"
readme = "README.md"
authors = [{ name = "Gnana Prasath", email = "gnana70@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ocr", "ocr tamil", "tamil", "indian ocr", "tamil ocr"]
dependencies = [
    "torch>=2",
    "torchvision>=0.15.1",
    "Pillow>=10.0.0",
    "opencv-python",
    "Open-Tamil",
    "numpy",
    "pandas",
    "gdown",
    "pytorch-lightning==1.9.5",
    "matplotlib",
    "scikit-image",
    "timm",
    "onnx",
    "onnxruntime"
]
requires-python = ">=3.9"



[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/gnana70/tamil_ocr"

[project.scripts]
ocr_tamil = "tamil_ocr.ocr_tamil:main"


