[metadata]
name = tamil_ocr
version = 0.0.1
author = Gnana Prasath
author_email = gnana70@gmail.com
description = Simple to use Python OCR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gnana70/tamil_ocr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
include_package_data = True